:rotating_light: fix : 주문 로직 수정 [#30]